# arrow-graph

./: .gitignore  Cargo.toml  README.md
benches/: graph_benchmarks.rs
src/: error.rs  lib.rs
src/algorithms/: aggregation.rs  centrality.rs  community.rs  components.rs  mod.rs  pathfinding.rs  sampling.rs  tests.rs  traits.rs  vectorized.rs
src/analytics/: feature_engineering.rs  forecasting.rs  gnn.rs  ml_pipeline.rs  mod.rs  statistics.rs  temporal.rs
src/connectors/: mod.rs  traits.rs
src/gpu/: mod.rs
src/graph/: arrow_graph.rs  indexes.rs  mod.rs  streaming.rs  tests.rs
src/interfaces/: mod.rs
src/ml/: embeddings.rs  features.rs  integration.rs  knowledge.rs  mod.rs  sampling.rs  similarity.rs
src/performance/: benchmarks.rs  memory.rs  mod.rs  parallel.rs  profiling.rs  simd.rs  simple_benchmarks.rs
src/sql/: extension.rs  functions.rs  gql_parser.rs  graph_functions.rs  mod.rs  multi_graph.rs  recursive_cte.rs  temporal_queries.rs  window_functions.rs
src/storage/: mod.rs
src/streaming/: algorithms.rs  approximate.rs  detection.rs  events.rs  incremental.rs  mod.rs  sampling.rs  temporal.rs
