[package]
name = "arrow-graph"
version = "0.5.0"
edition = "2021"
authors = ["Mike Saxton <mike@seacurity.io>"]
description = "Arrow-native graph processing engine with SQL interface"
license = "Apache-2.0"
repository = "https://github.com/seacurity/arrow-graph"
keywords = ["graph", "analytics", "arrow", "sql", "datafusion"]
categories = ["algorithms", "database"]

[dependencies]
# Core Arrow and DataFusion
arrow = "55.1.0"
arrow-array = "55.1.0"
arrow-schema = "55.1.0"
datafusion = "48.0.0"
datafusion-expr = "48.0.0"
datafusion-common = "48.0.0"
datafusion-execution = "48.0.0"
datafusion-physical-expr = "48.0.0"

# Async and parallelism
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# Graph algorithms reference
petgraph = "0.8.2"

# Serialization and errors
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI support
clap = { version = "4.0", features = ["derive"] }

# Hash maps and collections
hashbrown = "0.15.4"
indexmap = "2.0"

# Numeric computations
num-traits = "0.2"

# Random number generation for sampling
rand = "0.8"
rand_pcg = "0.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tempfile = "3.0"
pretty_assertions = "1.4"

[[bench]]
name = "graph_benchmarks"
harness = false

[[bin]]
name = "arrow-graph-cli"
path = "src/bin/main.rs"

[lib]
name = "arrow_graph"
path = "src/lib.rs"

[features]
default = ["python"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module"]
optional = true